--- a/bar.css
+++ b/bar.css
@@ -66,12 +66,17 @@ textarea {
 #path-box {
   float: left;
   padding-right: 10px;
-  width: 60%;
+  width: 50%;
 }
 
 #attrs-box {
   float: left;
-  width: 40%;
+  width: 45%;
+}
+
+#tool-box {
+  float: left;
+  width: 5%;
 }
 
 .box-name {
